--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Kotlin Base Project</string>
     <string name="loading">Loading…</string>
 
-    <string name="done">Done after five seconds! Tap to go to second view…</string>
+    <string name="done">Done after a delay! Tap to go to second view…</string>
     <string name="error">Error!</string>
 
     <string name="second_fragment">Now you\'re in the second fragment!</string>
