Add image animation transition

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="error">Error!</string>
 
     <string name="second_fragment">Now you\'re in the second fragment!</string>
+    <string name="stock_image">stock image</string>
 </resources>
