Bitrise workflow update. Bitrise yml is attached (although not necessary for it to work, it is for future reference only).
What I did was create 3 main workflows using modules to be able to update the steps more easily:
- pull-request: Triggered every time a PR is made. Run lints and test.
- devDebug: Triggered when something is pushed to master. It executes the same as pull-request and also generates a build devDebug.
- prodRelease: Triggered when a tag is generated. It executes the same as pull-request and also generates a release build.

Add flavors to make build generation more flexible according to available environments.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">Kotlin Base Project</string>
+    <string name="app_name">Rocket Base Project</string>
+    <string name="app_name_dev">[DEV] Rocket Base Project</string>
+
     <string name="loading">Loading…</string>
 
     <string name="done">Done after a delay! Tap to go to second view…</string>
