--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="title_second_fragment">Second Fragment</string>
     <string name="title_first_fragment">First Fragment</string>
     <string name="messages">Messages</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="parallax_image">Parallax image</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
 </resources>
