--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,11 @@
     <string name="title_second_fragment">Second Fragment</string>
     <string name="title_first_fragment">First Fragment</string>
     <string name="messages">Messages</string>
-    <string name="request_permissions">Request Permissions</string>
+
+    <!--Permissions-->
+    <string name="permissions_request">Request Permissions</string>
+    <string name="permissions_granted">Permissions granted :)</string>
+    <string name="permissions_denied">Permissions denied :(</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
