--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <!--Location-->
     <string name="location_request_current">Request Location</string>
     <string name="location_current">Your current location is %s</string>
+    <string name="location_error">Error checking location</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
