--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="permissions_granted">Permissions granted :)</string>
     <string name="permissions_denied">Permissions denied :(</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="parallax_image">Parallax image</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
 </resources>
