--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="parallax_image">Parallax image</string>
     <string name="login">Login</string>
     <string name="logout">Logout</string>
+    <string name="photo">Photo</string>
+    <string name="take_a_photo">Take a photo</string>
 </resources>
