Network Manager With this manager we can customize the retrofit instance very easily, and support offline mode using http cache. Also add interceptors to log requests by terminal and through Chucker, an interceptor to inject the user token, and a TokenAuthenticator to handle unauthorized calls.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title_second_fragment">Second Fragment</string>
     <string name="title_first_fragment">First Fragment</string>
     <string name="messages">Messages</string>
+    <string name="session_end">Your session ended, please re-login.</string>
 
     <!--Permissions-->
     <string name="permissions_request">Request Permissions</string>
