--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,8 +31,12 @@
     <string name="maps_display">Display Google Maps</string>
     <string name="maps_current_position">You are here!</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--Animations-->
+    <string name="animations">Animations</string>
+    <string name="animation_screen_subtitle">Quick access to animation examples on Android</string>
+    <string name="animation_1_title">Animation 1 Title</string>
+    <string name="animation_1_description">Animation 1 Description - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
+
     <string name="parallax_image">Parallax image</string>
     <string name="login">Login</string>
     <string name="logout">Logout</string>
