--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,12 +34,13 @@
     <!--Animations-->
     <string name="animations">Animations</string>
     <string name="animation_screen_subtitle">Quick access to animation examples on Android</string>
-    <string name="animation_1_title">Animation 1 Title</string>
+    <string name="animation_1_title">Lottie Animation</string>
     <string name="animation_2_title">Animation 2 Title</string>
     <string name="animation_3_title">Animation 3 Title</string>
-    <string name="animation_1_description">Animation 1 Description - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
+    <string name="animation_1_description">Simple loading animation of a rocket</string>
     <string name="animation_2_description">Animation 2 Description - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
     <string name="animation_3_description">Animation 3 Description - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
+    <string name="setting_up_your_rocket_account">Setting up your Rocket account</string>
 
     <string name="parallax_image">Parallax image</string>
     <string name="login">Login</string>
@@ -47,4 +48,5 @@
     <string name="photo">Photo</string>
     <string name="take_a_photo">Take a photo</string>
     <string name="error_creating_image_file">Error occurred while creating temporary image file for your photo.</string>
+    <string name="attribution_lottie_files">Pao Nguyen @LottieFiles</string>
 </resources>
