CalendarManager Added a basic implementation to manipulate the user's default Calendar. At the moment we can only add and list the events create with the app, but with this base it is easy to add the functions for removing and updating events. Same with Reminders.
Also:
- Added an example of LayoutAnimation for animation the insertion of Items in a RecyclerView.
- Move adapters package inside the ui package.
- Upgrade Kotlin version from 4.1.2 to 4.1.3.
- Upgrade minSdkVersion from 23 to 26 in order to use latest Date/Time clases without restrictions.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,10 @@
     <string name="button_info_intro">Click the button below to start container transformation from button to card</string>
     <string name="info_button">Info button</string>
 
+    <!-- Calendar -->
+    <string name="calendar">Calendar</string>
+    <string name="calendar_permission_not_granted">Calendar Write/Read permissions are needed for this feature</string>
+
     <!-- Photo -->
     <string name="photo">Photo</string>
     <string name="take_a_photo">Take a photo</string>
