--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,13 @@
     <!-- Bluetooth -->
     <string name="bluetooth">Bluetooth</string>
     <string name="bluetooth_permission_not_granted">Bluetooth permissions are needed for this feature</string>
+    <string name="bluetooth_permissions_denied">Bluetooth permissions were denied</string>
+    <string name="bluetooth_not_supported">Bluetooth is not supported in this device</string>
+    <string name="bluetooth_off">Bluetooth is off, please enable it for performing any action</string>
+    <string name="bluetooth_generic_error">Bluetooth Unknown Error</string>
+    <string name="bluetooth_pair">Pair</string>
+    <string name="bluetooth_pair_done">Device Paired Successfully</string>
+    <string name="bluetooth_unpair">Un-pair</string>
+    <string name="bluetooth_unpair_done">Device Un-Paired Successfully</string>
 
 </resources>
