--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,7 @@
 
     <!-- Bluetooth -->
     <string name="bluetooth">Bluetooth</string>
+    <string name="bluetooth_status">Bluetooth Status</string>
     <string name="bluetooth_permission_not_granted">Bluetooth permissions are needed for this feature</string>
     <string name="bluetooth_permissions_denied">Bluetooth permissions were denied</string>
     <string name="bluetooth_not_supported">Bluetooth is not supported in this device</string>
@@ -95,5 +96,9 @@
     <string name="bluetooth_pair_done">Device Paired Successfully</string>
     <string name="bluetooth_unpair">Un-pair</string>
     <string name="bluetooth_unpair_done">Device Un-Paired Successfully</string>
+    <string name="bluetooth_search_start">Search Nearby Devices</string>
+    <string name="bluetooth_search_stop">Stop Search</string>
+    <string name="bluetooth_paired_devices">Paired Devices:</string>
+    <string name="bluetooth_near_devices">Near Devices:</string>
 
 </resources>
