--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="container_transform_screen_title">Container Transform</string>
     <string name="the_greatest_recyclerview_screen_title">The Greatest RecyclerView</string>
     <string name="contacts_screen_title">Contacts</string>
+    <string name="hilt_screen_title">This is Hilt</string>
 
     <!--Permissions-->
     <string name="permissions_request">Request Permissions</string>
@@ -109,4 +110,9 @@
     <!-- Contacts -->
     <string name="contacts">Contacts</string>
     <string name="contacts_permission_not_granted">Read contacts permission not granted</string>
+
+    <!-- Hilt -->
+    <string name="hilt">Hilt example</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
